mobile alignment fixes in header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -51,6 +51,13 @@
     flex-direction: column;
     align-items: flex-start;
 }
+
+@media only screen and (max-width: 440px) {
+    .Page-container {
+        padding-top: 2rem;
+    }
+}
+
 .Description {
     max-width: 30em;
 }
