--- a/src/css/index.css
+++ b/src/css/index.css
@@ -58,6 +58,22 @@ a:hover {
     display: inline-block;
 }
 
+@media only screen and (max-width: 540px) {
+    .Heading-large {
+        font-size: 3rem;
+        margin-bottom: 24px;
+        border-bottom: 2.5px solid black;
+    }
+}
+
+@media only screen and (max-width: 340px) {
+    .Heading-large {
+        font-size: 2.5rem;
+        margin-bottom: 24px;
+        border-bottom: 2.5px solid black;
+    }
+}
+
 .Heading-medium {
     font-size: 2rem;
     margin-bottom: 24px;
